--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.squareup:square:7.0.0.20201118"
 }
