renamed package from com.example.hssdailyannouncements to com.felixperron.com and fixed bug where calendar view could crash

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         multiDexEnabled true
-        applicationId "com.example.schoolannouncementsapp"
+        applicationId "com.felixperron.hssapp"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
